--- a/trunk/install.txt
+++ b/trunk/install.txt
@@ -138,6 +138,66 @@
 ## $ perl -e 'printf "<request>getmyip</request>%c",0' | nc yourhost.com 9999
 ##
 ##############################################################
+############ JAVA LIMITATION / SERVER SIDE ISSUES ############
+##############################################################
+##
+## Due to a Java security update starting with JRE (java browser plugin) version 1.6.0_03, Java applets
+## loaded in a browser configured with HTTP/SOCKS Proxy will do "enhanced DNS checking" to avoid
+## Anti-DNS pinning attacks. If you'd like to know what Anti-DNS pinning attacks mean, look at:
+## http://seclists.org/fulldisclosure/2007/Jul/0159.html
+## 
+## Why does this concern us?
+## -------------------------
+## Basically, if an end user has configured a Proxy in their browser, and has any JRE version from
+## 1.6.0_03 to 1.6.0_07 (latest stable as of date), the Java plugin does "enhanced DNS Checking" before
+## it allows the applet to connect back to our server. That is, Java plugin will first do a DNS lookup
+## of the hostname of the server that loaded the applet (your server), then it will do a Reverse DNS
+## lookup on the IP address it gets to make sure that that IP resolves back to the same hostname to
+## prevent DNS-spoofing attacks. If the IP doesn't resolve back to the same hostname from which the
+## applet was loaded in the end-user's browser, the applet will not be able to connect back (and you
+## will see that Java throws an Access Control Exception in Java Console if you've compiled the applet
+## from the supplied HttpRequestor.java source code file with e.printStackTrace() uncommented).
+##
+## Example Scenario of who's affected:
+## -----------------------------------
+## - Your forum is hosted on domain name your-forum.com
+## - your-forum.com resolves to 1.2.3.4
+## - Reverse DNS lookup of 1.2.3.4 returns some-other-host.com
+##
+## Are there any Workarounds?
+## --------------------------
+## Fortunately yes, there are two options, though neither is really flexible for virtual-hosting
+## environments.
+##
+## 1. If you have a dedicated IP address with your hosting package, tell your Hosting Provider to setup
+## the Reverse DNS of that IP to the domain your forum is hosted on
+## (for example, make 1.2.3.4 resolve to your-forum.com)
+##
+## -or-
+##
+## 2. If you have a dedicated IP address with your hosting package but your ISP cannot help you setup
+## the Reverse DNS of that IP and you're sharing that IP for hosting multiple virtual domains, move
+## your-forum.com virtual domain to be the first virtual domain on that shared IP in your web-server
+## config so that:
+## -> http://1.2.3.4 goes to http://your-forum.com <-
+##    Then:
+##    - --[ OPEN ]--------------------------------------
+##      probe.php
+##    - --[ FIND ]--------------------------------------
+##      $java_url = $path_name . "probe.$phpEx?mode=java&amp;ip=$orig_ip&amp;extra=$sid,$key";
+##    + --[ AFTER, ADD ]--------------------------------
+##      $codebase_url = $server_protocol . htmlspecialchars($_SERVER['SERVER_ADDR']). $server_port . substr($path_name, 0, -1);
+##    - --[ FIND ]--------------------------------------
+##      <applet width="0" height="0" code="HttpRequestor.class" codebase=".">
+##    + --[ REAPLCE WITH ]------------------------------
+##      <applet width="0" height="0" code="HttpRequestor.class" codebase="<?php echo $codebase_url; ?>">
+##    - --[ SAVE/CLOSE ]--------------------------------
+##    - Re-upload probe.php to your server, replacing the old copy.
+##
+## The above two workarounds are the only solutions I could find. If you are aware of any other
+## workaround(s), please feel free to contact me at: jasmine.aura@yahoo.com
+##
+##############################################################
 #
 #-----[ COPY ]------------------------------------------
 #
