Improved upon masked IP auto-banning functionality. admin now has option to choose ban-length and ban reason and ban reason given to end-users. probe.php now uses user_ban() function from functions_users.php rather than inserting directly into phpbb_banlist database, and uses the configurable options described above when auto-banning. This required adding four new config_name's to phpbb_config, described in install.txt
Additionally, a minor fix to the code addition in functions.php which initiates the speculative test. Before, we were initiating the tests if $user->data['session_speculative_test'] is less than ZERO (meaning tests not yet initiated) or if it's not set yet (due to us loading too early - from page_header() - and session being created right before $user->data['session_speculative_test'] gets set). The second part was kind of flawed, because we didn't make sure a session exists first, so users from banned IP's get non-stop looping tests on the ban message page because the session gets destroyed every time it gets created, hence the minor change to first check if session exists in the conditional if statement.
Complicated? It's much easier to see this from looking at the code than trying to explain it. :)

--- a/install.txt
+++ b/install.txt
@@ -213,6 +213,10 @@ copy xss.xml to xss.xml
 #
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_block','14');
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban','0');
+INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban_length','0');
+INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban_length_other','2018-12-31');
+INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban_reason','Auto-banned by Proxy Revealer');
+INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban_give_reason','Your IP address is banned because it appears to be a Proxy');
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_prune','');
 ALTER TABLE phpbb_sessions ADD session_speculative_test tinyint(1) DEFAULT '-1' NOT NULL;
 ALTER TABLE phpbb_sessions ADD session_speculative_key char(10);
@@ -300,7 +304,7 @@ includes/functions.php
 #
 
 	// START Proxy Revealer Olympus
-	if ( !isset($user->data['session_speculative_test']) || (int) $user->data['session_speculative_test'] < 0 )
+	if ((!empty($user->session_id) && !isset($user->data['session_speculative_test'])) || (int) $user->data['session_speculative_test'] < 0)
 	{
 		$sql = "SELECT ip_address 
 			FROM " . SPECULATIVE_EXCLUDE_TABLE;
