--- a/trunk/install.txt
+++ b/trunk/install.txt
@@ -247,6 +247,7 @@ INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban_reason','Au
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_ban_give_reason','Your IP address is banned because it appears to be a Proxy');
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_prune','0');
 INSERT INTO phpbb_config (config_name, config_value) VALUES ('require_javascript','1');
+INSERT INTO phpbb_config (config_name, config_value) VALUES ('ip_cookie_age','6');
 ALTER TABLE phpbb_sessions ADD session_speculative_test tinyint(1) DEFAULT '-1' NOT NULL;
 ALTER TABLE phpbb_sessions ADD session_speculative_key char(10);
 CREATE TABLE phpbb_speculative_ips (
@@ -279,6 +280,7 @@ define('X_FORWARDED_FOR',1);
 define('XSS',2);
 define('JAVA',4);
 define('FLASH',8);
+define('COOKIE',16);
 // this is used in admin_speculative.php
 define('JAVA_INTERNAL',3);
 // END Proxy Revealer Olympus
